# termrain

./: CHANGELOG.md  Cargo.toml  README.ja.md  README.md
.github/workflows/: release.yml
src/: app.rs  cli.rs  config.rs  i18n.rs  main.rs  map.rs
src/api/: geocoding.rs  jma.rs  mod.rs  open_meteo.rs
src/render/: color.rs
src/ui/: current.rs  help.rs  hourly.rs  mod.rs  radar.rs  splash.rs  theme.rs  weekly.rs
