[package]
name = "termrain"
version = "0.3.0"
edition = "2024"
description = "Terminal weather forecast and rain radar TUI (JMA + Open-Meteo + RainViewer, Kitty graphics)"
license = "MIT"
authors = ["iorinu"]
repository = "https://github.com/iorinu/termrain"
homepage = "https://github.com/iorinu/termrain"
readme = "README.md"
keywords = ["tui", "weather", "radar", "ratatui", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
futures = "0.3.32"
geojson = "1.0.0"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
imageproc = { version = "0.27.0", default-features = false }
ratatui = "0.30.1"
ratatui-image = { version = "11.0.4", default-features = false }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json", "gzip"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "fs"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
unicode-width = "0.2.2"
urlencoding = "2.1.3"
